# tutoria

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ba4fabbb668_create_invite_code_table.py  37cc951e7e26_update_invite_code.py  af14925a24ae_update_invite_code_and_student.py  f25d5c2f7597_add_fields_to_teacher.py
backend/app/: main.py
backend/app/api/: api_v1.py  auth.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  security.py
backend/app/crud/: student.py  teacher.py
backend/app/curd/: teacher.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  comment.py  invite_code.py  lesson.py  student.py  teacher.py
backend/app/schemas/: invite_code.py  student.py  teacher.py  token.py
backend/app/tests/: conftest.py
backend/documents/: db_schema.md  note_2025_07_17.md
documents/: check_db.md  db_migration_guide_2025_08_05.md  install_libraries_poetry_docker.md  note_2025_07_18.md
documents/development_log/: 2025_08_07_en.md  2025_08_07_zh_tw.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/[locale]/: globals.css  layout.tsx  page.tsx
frontend/src/components/common/: FontTest.tsx
frontend/src/constants/: api.ts  index.ts  pricing.ts  services.ts
frontend/src/i18n/: request.ts  routing.ts
frontend/src/lib/: fonts.ts  utils.ts
frontend/src/types/: auth.ts
(+28 files in other folders)
