[tool.poetry]
name = "tutoria-backend"
version = "0.1.0"
description = ""
authors = ["andrea.fan <shan32157@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
black = "^25.1.0"
pydantic-settings = "^2.10.1"
pydantic = {extras = ["email"], version = "^2.11.7"}
alembic = "^1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"

